# auv_arduino

./: .gitmodules  CMakeLists.txt  README.md  package.xml
ard1/: CMakeLists.txt  firmware.cpp
ard2/: CMakeLists.txt  firmware.cpp
firmware/: CMakeLists.txt
include/auv_arduino/: Defs.hpp.save  defs.h  motor.h
launch/: ard1serial.launch  ard2serial.launch  serial.launch
srv/: SetMotor.srv  SetMotorPWM.srv
